package najah.stu.domain;
public enum VehicleStatus {
    AVAILABLE,
    RENTED
}