package najah.stu.domain;

public enum VehicleType {

    CAR,
    SUV,
    TRUCK
}